fix dark mode

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -134,6 +134,8 @@ code {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-background-light: #f6f7f8;
+  --color-background-dark: #111921;
 }
 
 @layer base {
